projects spacing fixed

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
   padding-bottom: 30px;
   margin-bottom: 20px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-  width: calc(50% - 40px);
+  width: 42%;
 }
 
 .project-tile h2 {
